--- a/index.html
+++ b/index.html
@@ -31,35 +31,35 @@
   <div class="web">
     <h1>mockup web</h1>
     <p>Beranda Web</p>
-    <img src="Beranda web.png" alt="">
+    <img src="mockup pweb/mockup pweb/Beranda web.png" alt="">
     <p>Daftar 1 web</p>
-    <img src="Daftar 1 web.png" alt="">
+    <img src="mockup pweb/Daftar 1 web.png" alt="">
     <p>Daftar 2 Web</p>
-    <img src="Daftar 2 web.png" alt="">
+    <img src="mockup pweb/Daftar 2 web.png" alt="">
     <p>Masuk Web</p>
-    <img src="Masuk web.png" alt="">
+    <img src="mockup pweb/Masuk web.png" alt="">
     <p>Semua komik Web</p>
-    <img src="Semua komik web.png" alt="">
+    <img src="mockup pweb/Semua komik web.png" alt="">
     <p>Tentang kami Web</p>
-    <img src="Tentang kami web.png" alt="">
+    <img src="mockup pweb/Tentang kami web.png" alt="">
     <p>Terbaru Web</p>
-    <img src="Terbaru web.png" alt="">
+    <img src="mockup pweb/Terbaru web.png" alt="">
 
   </div>
   <div class="mob">
     <h1>mockup mobile</h1>
     <p>Beranda Mobile</p>
-    <img src="Beranda Mobile.png" alt="">
+    <img src="mockup pweb/Beranda Mobile.png" alt="">
     <p>Daftar 1 Mobile</p>
-    <img src="Daftar 1 Mobile.png" alt="">
+    <img src="mockup pweb/Daftar 1 Mobile.png" alt="">
     <p>Daftar 2 Mobile</p>
-    <img src="Daftar 2 Mobile.png" alt="">
+    <img src="mockup pweb/Daftar 2 Mobile.png" alt="">
     <p>Masuk Mobile</p>
-    <img src="Masuk Mobile.png" alt="">
+    <img src="mockup pweb/Masuk Mobile.png" alt="">
     <p>Menu Mobile</p>
-    <img src="Menu Mobile.png" alt="">
+    <img src="mockup pweb/Menu Mobile.png" alt="">
     <p>Update terbaru Mobile</p>
-    <img src="Update terbaru.png" alt="">
+    <img src="mockup pweb/Update terbaru.png" alt="">
   </div>
 
 
