--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="web">
     <h1>mockup web</h1>
     <p>Beranda Web</p>
-    <img src="mockup pweb/mockup pweb/Beranda web.png" alt="">
+    <img src="mockup pweb/Beranda web.png" alt="">
     <p>Daftar 1 web</p>
     <img src="mockup pweb/Daftar 1 web.png" alt="">
     <p>Daftar 2 Web</p>
