index responsve dan colorful
pokok responsif karo onok warnane background,e

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
   <div class="web">
     <h1>mockup web</h1>
     <p>Beranda Web</p>
-    <img src="mockup pweb/Beranda web.png" alt="">
+    <img src="mockup pweb/Beranda Web.png" alt="">
     <p>Daftar 1 web</p>
-    <img src="mockup pweb/Daftar 1 web.png" alt="">
+    <img src="mockup pweb/Daftar 1 Web.png" alt="">
     <p>Daftar 2 Web</p>
-    <img src="mockup pweb/Daftar 2 web.png" alt="">
+    <img src="mockup pweb/Daftar 2 Web.png" alt="">
     <p>Masuk Web</p>
-    <img src="mockup pweb/Masuk web.png" alt="">
+    <img src="mockup pweb/Masuk Web.png" alt="">
     <p>Semua komik Web</p>
-    <img src="mockup pweb/Semua komik web.png" alt="">
+    <img src="mockup pweb/Semua Komik Web.png" alt="">
     <p>Tentang kami Web</p>
-    <img src="mockup pweb/Tentang kami web.png" alt="">
+    <img src="mockup pweb/Tentang Kami Web.png" alt="">
     <p>Terbaru Web</p>
-    <img src="mockup pweb/Terbaru web.png" alt="">
+    <img src="mockup pweb/Terbaru Web.png" alt="">
 
   </div>
   <div class="mob">
@@ -80,7 +80,7 @@
     <p>Menu Mobile</p>
     <img src="mockup pweb/Menu Mobile.png" alt="">
     <p>Update terbaru Mobile</p>
-    <img src="mockup pweb/Update terbaru.png" alt="">
+    <img src="mockup pweb/Update Terbaru.png" alt="">
   </div>
 
 
