--- a/index.html
+++ b/index.html
@@ -5,84 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-
-  <style>
-  *{
-    box-sizing: border-box;
-  }
-  html{
-    background-color: #b3ffab;
-  }
-
-    .web::after{
-      content: "";
-      clear: both;
-      display: table;
-    }
-    .web{
-      border: 1px solid white;
-      width:59.5%;
-      float:left;
-      text-align: center;
-      background: linear-gradient(to left, #b3ffab, #12fff7);
-    }
-    .web img {
-      width : 98%;
-      height: 98%;
-    }
-    .mob{
-      border: 1px solid white;
-      width:39.5%;
-      float:right;
-      text-align: center;
-      background: linear-gradient(to right, #b3ffab, #11ffbd);
-    }
-    .mob img{
-      width : 60%;
-      height: 60%;
-    }
-
-    @media screen and (max-width: 800px) {
-  .web, .mob {
-    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
-  }
-  </style>
 </head>
 <body>
-  <div class="web">
-    <h1>mockup web</h1>
-    <p>Beranda Web</p>
-    <img src="mockup pweb/Beranda Web.png" alt="">
-    <p>Daftar 1 web</p>
-    <img src="mockup pweb/Daftar 1 Web.png" alt="">
-    <p>Daftar 2 Web</p>
-    <img src="mockup pweb/Daftar 2 Web.png" alt="">
-    <p>Masuk Web</p>
-    <img src="mockup pweb/Masuk Web.png" alt="">
-    <p>Semua komik Web</p>
-    <img src="mockup pweb/Semua Komik Web.png" alt="">
-    <p>Tentang kami Web</p>
-    <img src="mockup pweb/Tentang Kami Web.png" alt="">
-    <p>Terbaru Web</p>
-    <img src="mockup pweb/Terbaru Web.png" alt="">
-
-  </div>
-  <div class="mob">
-    <h1>mockup mobile</h1>
-    <p>Beranda Mobile</p>
-    <img src="mockup pweb/Beranda Mobile.png" alt="">
-    <p>Daftar 1 Mobile</p>
-    <img src="mockup pweb/Daftar 1 Mobile.png" alt="">
-    <p>Daftar 2 Mobile</p>
-    <img src="mockup pweb/Daftar 2 Mobile.png" alt="">
-    <p>Masuk Mobile</p>
-    <img src="mockup pweb/Masuk Mobile.png" alt="">
-    <p>Menu Mobile</p>
-    <img src="mockup pweb/Menu Mobile.png" alt="">
-    <p>Update terbaru Mobile</p>
-    <img src="mockup pweb/Update Terbaru.png" alt="">
-  </div>
-
-
+  <p> ini index</p>
 </body>
 </html>
