--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <p> ini index</p>
-  <a href="prototype/index.html"></a>
+  <a href="prototype/index.html">link prototype</a>
 </body>
 </html>
