--- a/masuk.html
+++ b/masuk.html
@@ -30,7 +30,7 @@
         <h1>Daftar</h1>
         <input type="email" name="" id="" placeholder="Email">
         <input type="password" name="" id="" placeholder="Kata sandi">
-        <button type="button" name="button"><a href="index.html"></a></button>
+        <button type="button" name="button"><a href="index.html">Masuk</a></button>
         <a href="daftar1.html"><u>Belum punya akun?</u></a>
       </form>
     </div>
