--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div>
         <div>
-            <a href="">Tentang Kami</a>
+            <a href="tentangKami.html">Tentang Kami</a>
             <a href="">Ketentuan Layanan</a>
             <a href="">Dukungan Pelanggan</a>
         </div>
