--- a/Form/m nurfakhri z 1044/TugasPrakWebForm.html
+++ b/Form/m nurfakhri z 1044/TugasPrakWebForm.html
@@ -2,71 +2,8 @@
 
 <head>
     <title>Tugas Praktikum Perancangan Web</title>
-    <style>
-    body{
-        padding-top: 80px; 
-        background-image: url(https://cache.desktopnexus.com/thumbseg/2488/2488738-bigthumbnail.jpg);
-        background-size: cover;
-    }
-    
-    .kotak1{
-        padding: 20px;     
-        float: left;
-        width: 45%;
-        border: 3px solid rgb(255, 255, 255);
-        text-align: center;
-        border-radius: 20px;       
-    }
+    <link rel="stylesheet" href="style.css">
 
-    .kotak2{
-        padding: 20px;  
-        float: right;
-        width: 45%;
-        border: 3px solid rgb(255, 255, 255);
-        text-align: center;        
-        border-radius: 20px;   
-    }
-    
-    @media screen and (max-width:1000px) {
-    .kotak1 , .kotak2 {width:90%;}}
-
-    .kotakIsi{
-        width: 100%;
-        margin: 8px 0;
-    }
-
-    .kotakIsi input{
-        color: white;
-        outline: none;
-        border: none;
-        background: none;
-        border-bottom: 2px solid white;
-        margin: 5px 10px;
-        font-size: 16px;
-    }
-    .kotakIsi select{
-        color: white;
-        outline: none;
-        border: none;
-        background: none;
-        border-bottom: 2px solid white;
-        padding: 5px;
-    }
-
-    .btn{
-        width: 60%;
-        background: none;
-        border: 2px solid white;
-        font-size: 15px;
-        color: white;
-        padding: 5px;
-        border-radius: 10px;
-    }
-    .btn:hover{
-        background-color: white;
-        color: black
-    }
-    </style>
 </head>
 <body>
 
