--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
 
     <title>BACA KOMIK</title>
-     
+
 </head>
 <body>
     <div>
         <div>
             <a href="index.html">
                 <img src="asset/BACA KOMIK ICON.png" alt="">
-            </a>            
+            </a>
         </div>
         <ul>
             <li><a href="index.html">BERANDA</a> </li>
             <li><a href="semua.html">SEMUA KOMIK</a> </li>
             <li><a href="terbaru.html">TERBARU</a></li>
             <form action="">
-                <input type="text" placeholder="Cari">                
+                <input type="text" placeholder="Cari">
             </form>
             <li><a href="masuk.html">MASUK</a></li>
         </ul>
     </div>
-    
+
     <div>
         <p>In the last few hours</p>
         <h3>TRENDING UPDATE</h3>
@@ -36,8 +37,8 @@
                     <img src="asset/cover.jpg" alt="cover" >
                     <br> Naruto <br>
                     Episode 222
-                </a>    
-            </div>            
+                </a>
+            </div>
         </div>
         <div>
             <div>
@@ -45,8 +46,8 @@
                     <img src="asset/opm.jpg" alt="cover" >
                     <br> OPM <br>
                     Episode 222
-                </a>   
-            </div>   
+                </a>
+            </div>
         </div>
 
     </div>
@@ -57,12 +58,12 @@
         <div>
             <div>
                 <a href="">
-                    <img src="asset/bnh.jpg" alt="cover" sizes="20%" >                
+                    <img src="asset/bnh.jpg" alt="cover" sizes="20%" >
                     <div>
                         BNH <br>
                         Episode 222
-                    </div>                    
-                </a>   
+                    </div>
+                </a>
             </div>
             <div>
                 <a href="">
@@ -70,8 +71,8 @@
                     <div>
                         Solo Leveling <br>
                         Episode 222
-                    </div>                    
-                </a>   
+                    </div>
+                </a>
             </div>
             <div>
                 <a href="detail.html">
@@ -79,8 +80,8 @@
                     <div>
                         One Piece <br>
                         Episode 222
-                    </div>                    
-                </a>   
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -95,7 +96,7 @@
                 <li><a href="">Isekai</a></li>
                 <li><a href="">Komedi</a></li>
                 <li><a href="">Petualangan</a></li>
-            </ul>            
+            </ul>
         </div>
         <div>
             <a href="">Tampilkan lebih banyak</a>
@@ -113,7 +114,7 @@
                     <div>
                         Kimetsu no Yaiba <br>
                         Episode 222
-                    </div>                    
+                    </div>
                 </a>
             </div>
             <div>
@@ -123,7 +124,7 @@
                     <div>
                         Solo Leveling <br>
                         Episode 222
-                    </div>                    
+                    </div>
                 </a>
             </div>
         </div>
