--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 
 </head>
 <body>
-    <div>
-        <div>
-            <a href="index.html">
-                <img src="asset/BACA KOMIK ICON.png" alt="">
-            </a>
-        </div>
+    <div class="menu">
         <ul>
+          <li> <a href="index.html">
+              <img src="asset/BACA KOMIK ICON.png" alt="">
+          </a></li>
             <li><a href="index.html">BERANDA</a> </li>
             <li><a href="semua.html">SEMUA KOMIK</a> </li>
             <li><a href="terbaru.html">TERBARU</a></li>
