--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <div class="kiri">
-                    <li><a href="index.html" ><img src="asset/BACA KOMIK ICON.png" alt=""></a></li>
+                    <li><a href="index.html" ><img class="logo" src="asset/BACA KOMIK ICON.png" alt=""></a></li>
                     <li><a href="index.html" class="active">BERANDA</a> </li>
                     <li><a href="semua.html">SEMUA KOMIK</a> </li>
                     <li><a href="terbaru.html">TERBARU</a></li>
