--- a/masuk.html
+++ b/masuk.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="stylesheet" href="style.css">
     <title>BACA KOMIK</title>
 
 </head>
 <body>
-    <div>
-        <div>
-            <a href="index.html">
-                <img src="asset/BACA KOMIK ICON.png" alt="">
-            </a>
-        </div>
+    <nav>
         <ul>
-            <li><a href="index.html">BERANDA</a> </li>
-            <li><a href="semua.html">SEMUA KOMIK</a> </li>
-            <li><a href="terbaru.html">TERBARU</a></li>
-            <form action="">
-                <input type="text" placeholder="Cari">
-            </form>
-            <li><a href="masuk.html">MASUK</a></li>
+            <div class="kiri">
+                <li><a  href="index.html"><img src="asset/BACA KOMIK ICON.png" alt=""></a></li>
+                <li><a href="index.html">BERANDA</a> </li>
+                <li><a href="semua.html">SEMUA KOMIK</a> </li>
+                <li><a href="terbaru.html">TERBARU</a></li>
+            </div>  
+                    
+            <div class="kanan">
+                <li > <input type="text" placeholder="Cari"> </li>
+                <li  ><a href="masuk.html">MASUK</a></li>
+            </div>
+                    
         </ul>
-    </div>
+    </nav>
     <div>
       <form action="">
         <h1>Daftar</h1>
