--- a/tentangKami.html
+++ b/tentangKami.html
@@ -9,22 +9,22 @@
 
 </head>
 <body>
-    <div>
-        <div>
-            <a href="index.html">
-                <img src="asset/BACA KOMIK ICON.png" alt="">
-            </a>
-        </div>
+    <nav>
         <ul>
-            <li><a href="index.html">BERANDA</a> </li>
-            <li><a href="semua.html">SEMUA KOMIK</a> </li>
-            <li><a href="terbaru.html">TERBARU</a></li>
-            <form action="">
-                <input type="text" placeholder="Cari">
-            </form>
-            <li><a href="masuk.html">MASUK</a></li>
+            <div class="kiri">
+                <li><a  href="index.html"><img src="asset/BACA KOMIK ICON.png" alt=""></a></li>
+                <li><a href="index.html">BERANDA</a> </li>
+                <li><a href="semua.html">SEMUA KOMIK</a> </li>
+                <li><a href="terbaru.html">TERBARU</a></li>
+            </div>  
+            
+        <div class="kanan">
+                <li > <input type="text" placeholder="Cari"> </li>
+                <li  ><a href="masuk.html">MASUK</a></li>
+        </div>
+            
         </ul>
-    </div>
+    </nav>
     <div>
       <h1>Tentang Kami</h1>
       <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, quas, quo. Deleniti laborum autem aut, numquam amet dolor, natus voluptatum reprehenderit possimus atque, voluptas voluptate qui aliquid ad deserunt maxime!</span>
