--- a/masuk.html
+++ b/masuk.html
@@ -12,17 +12,17 @@
     <nav>
         <ul>
             <div class="kiri">
-                <li><a  href="index.html"><img src="asset/BACA KOMIK ICON.png" alt=""></a></li>
-                <li><a href="index.html">BERANDA</a> </li>
+                <li><a href="index.html" ><img class="logo" src="asset/BACA KOMIK ICON.png" alt=""></a></li>
+                <li><a href="index.html" class="active">BERANDA</a> </li>
                 <li><a href="semua.html">SEMUA KOMIK</a> </li>
                 <li><a href="terbaru.html">TERBARU</a></li>
-            </div>  
-                    
-            <div class="kanan">
+            </div>
+
+        <div class="kanan">
                 <li > <input type="text" placeholder="Cari"> </li>
                 <li  ><a href="masuk.html">MASUK</a></li>
-            </div>
-                    
+        </div>
+
         </ul>
     </nav>
     <div>
