--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div class="kanan">
                     <li > <input type="text" placeholder="Cari"> </li>
-                    <li  ><a href="masuk.html">MASUK</a></li>
+                    <li  ><button href="masuk.html">MASUK</a></button>
             </div>
 
             </ul>
