--- a/detail.html
+++ b/detail.html
@@ -8,6 +8,7 @@
     <title>BACA KOMIK</title>
 </head>
 <body>
+    <div class="menu">
         <ul>
             <li class="logo">
                 <a href="index.html">
