--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                     <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
                     </li>
                     <li><a href="index.html" ><img class="logo" src="asset/BACA KOMIK ICON.png" alt=""></a></li>
-                    <li><a href="index.html" class="active">BERANDA</a> </li>
-                    <li><a href="semua.html">SEMUA KOMIK</a> </li>
-                    <li><a href="terbaru.html">TERBARU</a></li>
+                    <li><a class="respon"href="index.html" class="active">BERANDA</a> </li>
+                    <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
+                    <li><a class="respon" href="terbaru.html">TERBARU</a></li>
                 </div>
-
             <div class="kanan">
-                    <li > <input type="text" placeholder="Cari"> </li>
+                    <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
+                    </li>
+                    <li> <input class="respon" type="text" placeholder="Cari"> </li>
                     <li  ><button href="masuk.html">MASUK</a></button>
             </div>
-
             </ul>
         </nav>
 
