--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
                     </li>
                     <li> <input class="respon" type="text" placeholder="Cari"> </li>
-                    <li  ><button href="masuk.html">MASUK</a></button>
+                    <div class="button"><a  href="masuk.html"> MASUK</a></div>
             </div>
             <div class="clear"></div>
             <div id="bar" style="display:none;"  class="bar">
