--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
 
 
 <div class="clear"></div>
-    <div>
+<div class="clear"></div>
+
+    <footer>
         <div>
             <a href="">Tentang Kami</a>
             <a href="">Ketentuan Layanan</a>
@@ -157,7 +159,7 @@
         <div>
             © 2019
         </div>
-    </div>
+    </footer>
 
     <script>
     var x = document.getElementById("bar");
