--- a/index.html
+++ b/index.html
@@ -96,6 +96,33 @@
                         </a>
                     </div>
             </div>
+
+            <div class="sidebar">
+                <h3>Paling Populer</h3>
+                <a href="">Lihat semua</a>
+                <div isi2>
+                    <div>
+                        <div>1.</div>
+                        <a href="">
+                            <img src="asset/kny.jpg" alt="cover" sizes="20%" >
+                            <div>
+                                Kimetsu no Yaiba <br>
+                                Episode 222
+                            </div>                    
+                        </a>
+                    </div>
+                    <div>
+                        <div>2.</div>
+                        <a href="">
+                            <img src="asset/drstone.jpg" alt="cover" sizes="20%" >
+                            <div>
+                                Solo Leveling <br>
+                                Episode 222
+                            </div>                    
+                        </a>
+                    </div>
+                </div>
+            </div>
     <div>
         <div>
             <a href="">Tentang Kami</a>
