--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             </ul>
         </nav>
 
+        <!-- KONTEN -->
+
     <div class="konten">
         <div class="main-kiri">
             <div class="isi">
@@ -63,6 +65,26 @@
                         </a>
                     </div>
                 </div>
+                <div class="cover1">
+                    <div>
+                        <a href="detail.html">
+                            <img src="asset/kny.jpg" alt="cover" >
+                            <br> Kimetsu No Yaiba <br>
+                            Episode 99
+                        </a>
+                    </div>
+                </div>
+                <div class="cover1">
+                    <div>
+                        <a href="">
+                            <img src="asset/drstone.jpg" alt="cover" >
+                            <br> Dr. Stone <br>
+                            Episode 56
+                        </a>
+                    </div>
+                </div>
+            </div>
+
             <div class="isi">
                 <h3>UPDATE TERBARU</h3>
                 <a href="terbaru.html">Lihat semua</a>
@@ -90,12 +112,28 @@
                             <div>
                                 One Piece <br>
                                 Episode 222
-                              </a>
                             </div>
+                        </a>
                     </div>
             </div>
+        </div>
 
             <div class="sidebar">
+                    <div><h3>Cari Menurut Genre</h3></div>
+                    <div>
+                        <ul>
+                            <li><a href="">Aksi</a></li>
+                            <li><a href="">Drama</a></li>
+                            <li><a href="">Horor</a></li>
+                            <li><a href="">Isekai</a></li>
+                            <li><a href="">Komedi</a></li>
+                            <li><a href="">Petualangan</a></li>
+                        </ul>            
+                    </div>
+                    <div>
+                        <a href="">Tampilkan lebih banyak</a>
+                    </div>
+                
                 <h3>Paling Populer</h3>
                 <a href="">Lihat semua</a>
                 <div isi2>
@@ -121,7 +159,7 @@
                     </div>
                 </div>
             </div>
-    <div>
+    </div>
 
 <div class="clear"></div>
 
