--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="isi">
                 <p>In the last few hours</p>
                 <h3>TRENDING UPDATE</h3>
-                <a href="terbaru.html">Lihat semua</a>
+                <span><a href="terbaru.html">Lihat semua</a></span>
                 <div class="cover1">
                     <div>
                         <a href="detail.html">
@@ -119,8 +119,9 @@
         </div>
 
             <div class="sidebar">
+                <div class="kanan1">
                     <div><h3>Cari Menurut Genre</h3></div>
-                    <div>
+                    <div class="is">
                         <ul>
                             <li><a href="">Aksi</a></li>
                             <li><a href="">Drama</a></li>
@@ -133,32 +134,34 @@
                     <div>
                         <a href="">Tampilkan lebih banyak</a>
                     </div>
+                </div>
                 
-                <h3>Paling Populer</h3>
-                <a href="">Lihat semua</a>
-                <div isi2>
-                    <div>
-                        <div>1.</div>
-                        <a href="">
-                            <img src="asset/kny.jpg" alt="cover" sizes="20%" >
-                            <div>
-                                Kimetsu no Yaiba <br>
-                                Episode 222
-                            </div>                    
-                        </a>
-                    </div>
-                    <div>
-                        <div>2.</div>
-                        <a href="">
-                            <img src="asset/drstone.jpg" alt="cover" sizes="20%" >
-                            <div>
-                                Solo Leveling <br>
-                                Episode 222
-                            </div>                    
-                        </a>
+                <div class="kanan2">
+                    <h3>Paling Populer</h3>
+                    <a href="">Lihat semua</a>
+                    <div isi2>
+                        <div>
+                            <div>1.</div>
+                            <a href="">
+                                <img src="asset/kny.jpg" alt="cover" sizes="20%" >
+                                <div>
+                                    Kimetsu no Yaiba <br>
+                                    Episode 222
+                                </div>                    
+                            </a>
+                        </div>
+                        <div>
+                            <div>2.</div>
+                            <a href="">
+                                <img src="asset/drstone.jpg" alt="cover" sizes="20%" >
+                                <div>
+                                    Solo Leveling <br>
+                                    Episode 222
+                                </div>                    
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
     </div>
 
 <div class="clear"></div>
