--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
 <div class="clear"></div>
     <footer>
         <div>
-            <a href="">Tentang Kami</a>
-            <a href="">Ketentuan Layanan</a>
-            <a href="">Dukungan Pelanggan</a>
+            <a href="tentangKami.html">Tentang Kami</a>
+            <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
+            <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
         </div>
         <div>
             <p>© 2019</p>
