--- a/tentangKami.html
+++ b/tentangKami.html
@@ -4,45 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/tentangKami.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BACA KOMIK</title>
 
 </head>
 <body>
-    <nav>
-        <ul>
-            <div class="kiri">
-                <li><a href="index.html" ><img class="logo" src="asset/BACA KOMIK ICON.png" alt=""></a></li>
-                <li><a href="index.html" class="active">BERANDA</a> </li>
-                <li><a href="semua.html">SEMUA KOMIK</a> </li>
-                <li><a href="terbaru.html">TERBARU</a></li>
+        <nav class="topnav" id="myTopnav">
+            <ul>
+                <div class="kiri">
+                    <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a>
+                    </li>
+                    <li><a href="index.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
+                    <li><a class="respon"href="index.html" class="active">BERANDA</a> </li>
+                    <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
+                    <li><a class="respon" href="terbaru.html">TERBARU</a></li>
+                </div>
+            <div class="kanan">
+                    <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
+                    </li>
+                    <li> <input class="respon" type="text" placeholder="Cari"> </li>
+                    <div class="button"><a  href="masuk.html"> MASUK</a></div>
             </div>
+            <div class="clear"></div>
+            <div id="bar" style="display:none;"  class="bar">
+              <a class="respon"href="index.html" class="active">BERANDA</a>
+              <a class="respon"href="semua.html">SEMUA KOMIK</a>
+              <a class="respon" href="terbaru.html">TERBARU</a>
+            </div>
+            <div id="find" style="display:none;"  class="bar">
+              <input class="respon" type="text" placeholder="Cari">
+            </div>
+            </ul>
+        </nav>
 
-        <div class="kanan">
-                <li > <input type="text" placeholder="Cari"> </li>
-                <li  ><a href="masuk.html">MASUK</a></li>
-        </div>
-
-        </ul>
-    </nav>
-    <div>
+<!-- KONTEN -->
+    <div class="konten">
       <h1>Tentang Kami</h1>
-      <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, quas, quo. Deleniti laborum autem aut, numquam amet dolor, natus voluptatum reprehenderit possimus atque, voluptas voluptate qui aliquid ad deserunt maxime!</span>
-      <span>Doloremque vitae autem quibusdam placeat assumenda aut minima. Impedit quaerat odio, officiis enim qui, maiores fuga repellendus iste consequuntur nam nobis fugiat iure adipisci earum repellat et ipsa magnam voluptate.</span>
-      <span>Possimus minus vitae odio sint. Assumenda ex, consectetur deserunt! Aliquid expedita, itaque sed sunt molestias. Impedit quas, sequi nulla atque dolorum ratione, libero soluta, corrupti aperiam veniam reprehenderit praesentium deserunt.</span>
-      <span>Quidem quibusdam consequatur quas ad dolore suscipit optio consequuntur ipsam commodi asperiores sunt, provident, ex beatae error incidunt rerum ab explicabo. Minus est alias quas blanditiis iure aspernatur ea nihil!</span>
-      <span>Ratione delectus, nulla culpa consequuntur maxime ex minima odio fuga neque, illum quaerat deleniti, soluta et voluptas harum laboriosam natus rerum. Culpa consequuntur maiores minus. Ipsum ipsa unde ducimus quidem.</span>
-      <span>Quibusdam in aliquam odio iure magni porro ad nemo impedit placeat tenetur, corporis, incidunt eaque enim molestiae quo omnis deserunt quis expedita quam dolor dolorum cum iusto velit, quisquam quod!</span></p>
-    </div>
-    <div>
-        <div>
-            <a href="tentangKami.html">Tentang Kami</a>
-            <a href="">Ketentuan Layanan</a>
-            <a href="">Dukungan Pelanggan</a>
+      <p>&nbsp&nbsp&nbsp&nbsp&nbsp Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consequatur voluptatem deleniti ipsum aliquam, expedita et earum. Eligendi placeat animi voluptatem assumenda minima quidem sed, adipisci necessitatibus cumque libero! Molestiae modi, neque sed commodi autem vitae ratione libero, velit nam sint necessitatibus? Quaerat ratione ipsum, repudiandae ullam id sapiente beatae, assumenda libero. Soluta dolorum ratione ad atque voluptatem ipsam aperiam enim quos adipisci, magni aliquam nobis temporibus commodi vitae eos iste a odio corrupti dignissimos optio assumenda obcaecati deserunt rem modi. Dolorum repudiandae asperiores, eum sit! Iure vitae, unde. Quasi, sapiente totam similique nihil tempora nesciunt autem reprehenderit ratione eaque.</p>
+
+    <!-- footer -->
+    <div class="clear"></div>
+        <div class="footer tentangKami">
+            <div>
+              <a href="tentangKami.html">Tentang Kami</a>
+              <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
+              <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
+            </div>
+            <div>
+                <p>© 2019</p>
+            </div>
         </div>
-        <div>
-            © 2019
-        </div>
-    </div>
-</body>
-</html>
+
+        <script>
+        var x = document.getElementById("bar");
+        var y = document.getElementById("find");
+        function bar() {
+           if (x.style.display === "none") {
+             x.style.display = "block";
+             y.style.display = "none";
+           } else {
+             x.style.display = "none";
+           }
+          }
+          function find() {
+             if (y.style.display === "none") {
+               y.style.display = "block";
+               x.style.display = "none";
+             } else {
+               y.style.display = "none";
+             }
+            }
+        </script>
+    </body>
+    </html>
